objects/SFDC_Enrollment__c.object
<CustomObject>
    <description>Connector object that associates a Student to a Class.</description>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SFDC_Class__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Class__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>R00N40000001QAyfEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Student Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>ClassroomStudent</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active_Student__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>R00N40000001QAygEAG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                    <default>true</default>
                    <label>Registered</label>
                </value>
                <value>
                    <fullName>Wait Listed</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Academic_Grade__c</fullName>
        <description>Student&apos;s school grade</description>
        <inlineHelpText>Enter the student&apos;s school grade</inlineHelpText>
        <label>Student Academic Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C-</fullName>
                </value>
                <value>
                    <fullName>D+</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>D-</fullName>
                </value>
                <value>
                    <fullName>F+</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>F-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Behavior_Evaluation__c</fullName>
        <description>Student&apos;s Behavior Evaluation</description>
        <inlineHelpText>Enter the student&apos;s behavior evaluation for the course</inlineHelpText>
        <label>Student Behavior Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Needs Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Instrument_Mastery__c</fullName>
        <description>Students Instrument Mastery Level</description>
        <inlineHelpText>Enter the students instrument mastery level for the course</inlineHelpText>
        <label>Student Instrument Mastery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Enrollment</label>
    <listViews>
        <fullName>AllEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Class__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Enrollments</label>
    </listViews>
    <listViews>
        <fullName>CompletedEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Enrollments</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>